<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:title="@string/action_filter"
        android:icon="@drawable/action_filter"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/filter_all"
                android:title="@string/all"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/filter_homework"
                android:title="@string/homework"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/filter_reading"
                android:title="@string/reading"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/filter_work"
                android:title="@string/work"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/filter_reminder"
                android:title="@string/reminder"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/filter_exercise"
                android:title="@string/exercise"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/filter_chore"
                android:title="@string/chore"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

    <item
        android:id="@+id/sort"
        android:title="@string/action_sort"
        android:icon="@drawable/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_newest"
                android:title="@string/sort_newest"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/sort_oldest"
                android:title="@string/sort_oldest"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/sort_type"
                android:title="@string/sort_type"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>
