<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_quests"
            android:icon="@drawable/nav_schedule"
            android:title="@string/nav_quests" />
        <item
            android:id="@+id/nav_battle"
            android:icon="@drawable/nav_battle"
            android:title="@string/nav_battle" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/nav_shop"
            android:title="@string/nav_shop" />
        <item
            android:id="@+id/nav_character"
            android:icon="@drawable/nav_character"
            android:title="@string/nav_character" />
    </group>

    <item android:title="@string/nav_training">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_training_int"
                    android:icon="@drawable/stat_int"
                    android:title="@string/nav_int" />
                <item
                    android:id="@+id/nav_training_str"
                    android:icon="@drawable/stat_str"
                    android:title="@string/nav_str" />
                <item
                    android:id="@+id/nav_training_sta"
                    android:icon="@drawable/stat_sta"
                    android:title="@string/nav_sta" />
            </group>
        </menu>
    </item>
</menu>
