<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/_gradient"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:text="@string/select_class"/>

    <TextView
        android:id="@+id/class_magician"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:background="@color/colorBlueLight"
        android:drawableEnd="@drawable/stat_int_blue"
        android:drawableStart="@drawable/skill_magic"
        android:drawablePadding="10dp"
        android:textSize="22sp"
        android:text="@string/class_magician"/>
    <TextView
        android:id="@+id/class_knight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:background="@color/colorRedLight"
        android:drawableEnd="@drawable/stat_str_red"
        android:drawableStart="@drawable/skill_defend"
        android:drawablePadding="10dp"
        android:textSize="22sp"
        android:text="@string/class_knight"/>
    <TextView
        android:id="@+id/class_adventurer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:background="@color/colorGreenLight"
        android:drawableEnd="@drawable/stat_sta_green"
        android:drawableStart="@drawable/skill_bandage"
        android:drawablePadding="10dp"
        android:textSize="22sp"
        android:text="@string/class_adventurer"/>
    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:background="@color/colorBlueLight"
        android:drawableEnd="@drawable/stat_int_blue"
        android:drawableStart="@drawable/skill_heal"
        android:drawablePadding="10dp"
        android:textSize="22sp"
        android:text="@string/class_cleric"/>
    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:background="@color/colorRedLight"
        android:drawableEnd="@drawable/stat_str_red"
        android:drawableStart="@drawable/skill_sneak"
        android:drawablePadding="10dp"
        android:textSize="22sp"
        android:text="@string/class_assassin"/>
    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:background="@color/colorGreenLight"
        android:drawableEnd="@drawable/stat_sta_green"
        android:drawableStart="@drawable/skill_steal"
        android:drawablePadding="10dp"
        android:textSize="22sp"
        android:text="@string/class_thief" />

</LinearLayout>