<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:background="@drawable/_gradient"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:text="@string/quest_complete"/>

    <TextView
        android:id="@+id/exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="22sp"
        tools:text="You earned 20 EXP!"/>
    <TextView
        android:id="@+id/lvl_bonus"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:text="@string/level_up"/>

    <TextView
        android:id="@+id/stat_bonus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:gravity="center"
        android:textSize="22sp"
        tools:text="INT +2\nSTR +1\nSTA+1"/>

    <Button
        android:id="@+id/button_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/okay" />

</LinearLayout>