<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="?android:attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Quest name -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/font" />
                <EditText
                    android:id="@+id/quest_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quest_name" />
            </LinearLayout>

            <!-- Quest type -->
            <Spinner
                android:id="@+id/quest_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </Spinner>

            <!-- Quest date -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp" >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/clock" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >
                    <TextView
                        android:id="@+id/quest_date_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:clickable="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:text="@string/quest_start" />
                    <TextView
                        android:id="@+id/quest_date_end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginStart="10dp"
                        android:clickable="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:text="@string/quest_end"/>
                    <TextView
                        android:id="@+id/quest_date_notify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginStart="10dp"
                        android:clickable="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:text="@string/quest_notify"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Quest repeating -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/refresh" />
                <TextView
                    android:id="@+id/quest_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:text="@string/quest_no_repeat" />
            </LinearLayout>

            <Button
                android:id="@+id/quest_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:text="@string/quest_add"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>